# healthnable-FE

./: .dockerignore  Dockerfile  README.md  alembic.ini  angular.json  app.py  config.py  database.py  nginx.conf  package-lock.json  package.json  pyproject.toml
alembic/: env.py
attached_assets/: 1. SRS _ Homecare _ Caregiver Mobile App.docx
middleware/: __init__.py  auth_middleware.py
models/: __init__.py  chat.py  document.py  note.py  notification.py  patient.py  settings.py  sync.py  user.py  visit.py  vital.py
projects/healthnable-foundation-app/: webpack.config.js
projects/healthnable-foundation-app/public/i18n/: ar.json  de.json  en.json
projects/healthnable-foundation-app/src/: index.html  styles.scss
projects/healthnable-foundation-app/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.guard.ts  validation.ts
projects/healthnable-foundation-app/src/enviornment/: environment.ts
routers/: __init__.py  auth.py  chat.py  document.py  note.py  notification.py  patient.py  settings.py  sync.py  user.py  visit.py  vital.py
routes/: __init__.py  auth.py  chat.py  document.py  note.py  notification.py  patient.py  settings.py  sync.py  user.py  visit.py  vital.py
schemas/: __init__.py  auth.py  chat.py  document.py  note.py  notification.py  patient.py  settings.py  sync.py  user.py  visit.py  vital.py
tests/: conftest.py  test_auth.py
utils/: auth.py  file_handler.py  notifications.py  sync_manager.py  validation.py
(+438 files in other folders)
